--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,5 +10,6 @@
     <button id="nigga">
         Click Me ra saale
     </button>
+    <script src="/testing/Backend/script.js"></script>
 </body>
 </html>
